scrollspy, links, einfach so verfeinern

--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="80">
 
   {% include "_layouts/navbar" %}
   {% include "_layouts/navbar-mobile" %}
