--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/einkaufenundspenden.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/einkaufenundspenden.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat;">
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat; background-color: white;">
   <div class="container zwoelferspaltenlayout" style="background-color: white; padding-left: 0; padding-right: 0;">
 
     {% set entry = craft.entries.section('spenden').slug('einkaufen-und-spenden').one() %}
