--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/partnerlandregelmaesig.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/partnerlandregelmaesig.html
@@ -5,7 +5,6 @@
 {% set entry = craft.entries.section('suchmaschinenoptimierung').slug('länderpate').one() %}
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
-{% block block1 %}
 
 {% block block1 %}
 
@@ -59,8 +58,8 @@
                 </div>
                   <div class="col-sm-1" style="background-color: white;"> </div>
                   <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-Website.de/spende/spende.php" class="btn btn-primary" role="button">Jetzt Spenden</a>
-                    <div id="copy" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
+                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                    <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                   <img class="img-fluid" style="max-height: 720px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
                 </div>
@@ -74,8 +73,8 @@
                 </div>
                   <div class="col-sm-1" style="background-color: white;"> </div>
                   <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-Website.de/spende/spende.php" class="btn btn-primary" role="button">Jetzt Spenden</a>
-                    <div id="copy" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
+                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                    <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                   <img class="img-fluid" style="max-height: 478px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
@@ -89,8 +88,8 @@
                 </div>
                   <div class="col-sm-1" style="background-color: white;"> </div>
                   <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-Website.de/spende/spende.php" class="btn btn-primary" role="button">Jetzt Spenden</a>
-                    <div id="copy" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
+                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                    <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                   <img class="img-fluid" style="max-height: 588px;" src="{% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
@@ -104,8 +103,8 @@
                 </div>
                   <div class="col-sm-1" style="background-color: white;"> </div>
                   <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-Website.de/spende/spende.php" class="btn btn-primary" role="button">Jetzt Spenden</a>
-                    <div id="copy" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
+                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                    <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                   <img class="img-fluid"  style="max-height: 530px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
