--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim/blumen.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim/blumen.html
@@ -23,10 +23,8 @@
   <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('fuerSie').slug('kurzfristig').one() %}
 
-    <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+      <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
       <div id="anleser"> {{ entry.anleser }}</div>
-      </div>
     </div>
   </div>
 
