--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim/kaffee.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim/kaffee.html
@@ -8,6 +8,17 @@
 
 {% block block1 %}
 
+<nav id="myScrollspy">
+  <ul class="nav nav-pills flex-column">
+       <li class="nav-item">   <a class="nav-link active" href="#genuss"> </a> <span>Kaffeegenuss</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#segen"></a> <span> Kaffee - Segen oder Fluch </span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#umwelt"></a> <span> Der Kaffee und die Umwelt </span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#abfall"></a> <span> Kaffee und Abfall </span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#tun"></a> <span> Was wir tun können</span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#fazit"></a> <span> Fazit </span>  </li>
+  </ul>
+</nav>
+
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
@@ -20,7 +31,7 @@
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;" id="genuss">
     {% set entry = craft.entries.section('fuerSie').slug('kaffeegenuss').one() %}
     <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
     <div id="anleser"> {{ entry.anleser }}</div>
@@ -30,7 +41,7 @@
 <img class="img-fluid mx-auto d-block" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
 
 <div class="container-fluid no-padding" style="background-color: white; padding-top: 0px;">
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-top: 0;">
     <div id="info">
       Abbildung 4: CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=134763
     </div>
@@ -43,14 +54,14 @@
     <div id="copy"> {{ entry.text }} </div>
   </div>
 
-  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
+  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;" id="segen">
     <h2 style="padding-bottom: 0;"> {{ entry.zusatzfeld2 }} </h2>
     <div id="anleser"> {{ entry.zusatzfeld3 }}</div>
   </div>
 
   <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
     <img class="img-fluid" style="padding-bottom: 0px;" src="{% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
-    <div class="container achterspaltenlayout">
+    <div class="container achterspaltenlayout" style="padding-top: 0;">
       <div id="info">
         Abbildung 1:By Bamse - self-made using data at w:List of countries by coffee consumption per capita, CC BY-SA 3.0,
         https://commons.wikimedia.org/w/index.php?curid=2044673      </div>
@@ -71,7 +82,7 @@
       <div id="copy"> {{ entry.text }} </div>
     </div>
 
-    <div class="container achterspaltenlayout">
+    <div class="container achterspaltenlayout" id="umwelt">
       <h3> {{ entry.zusatzfeld2 }} </h3>
       <div id="copy"> {{ entry.zusatzfeld3 }} </div>
     </div>
@@ -97,20 +108,20 @@
       <div id="copy"> {{ entry.text }} </div>
     </div>
 
-    <div class="container achterspaltenlayout">
+    <div class="container achterspaltenlayout" id="abfall">
       <h3> {{ entry.zusatzfeld2 }} </h3>
       <div id="copy"> {{ entry.zusatzfeld3 }} </div>
     </div>
 
     {% set entry = craft.entries.section('fuerSie').slug('tun').one() %}
-    <div class="container achterspaltenlayout">
+    <div class="container achterspaltenlayout" id="tun">
       <h3> {{ entry.title }} </h3>
       <div id="copy"> {{ entry.anleser }} </div>
     </div>
 
   </div> <!-- weißer Hintergrundcontainer -->
 
-  <div class="container achterspaltenlayout text-center" style="padding-top:3rem; padding-bottom: 1rem;">
+  <div class="container achterspaltenlayout text-center" style="padding-top:3rem; padding-bottom: 1rem;" id="fazit">
     <h2> {{ entry.zusatzfeld1 }} </h2>
     <div id="anleser"> {{ entry.text }}  </div>
   </div>
