--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
@@ -8,8 +8,14 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
+<nav id="myScrollspy">
+  <ul class="nav nav-pills flex-column">
+       <li class="nav-item">   <a class="nav-link active" href="#profil"> </a> <span>Dein Profil</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#bewerbung"></a> <span> Deine Bewerbung </span>  </li>
+  </ul>
+</nav>
 
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
@@ -22,7 +28,7 @@
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;" id="profil">
     {% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
 
     <div style="padding-bottom:3rem; ">
@@ -53,7 +59,7 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 </div> <!-- Weißer Hintergrund-Div -->
 
-  <div class="container achterspaltenlayout" style="padding-top: 2rem;">
+  <div class="container achterspaltenlayout" style="padding-top: 2rem;" id="bewerbung">
     {% set entry = craft.entries.section('fuerSie').slug('bewerbung').one() %}
     <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
     <div id="copy"> {{ entry.anleser }}</div>
