--- a/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
@@ -8,6 +8,13 @@
 
 {% block block1 %}
 
+<style>
+.stylevorgaben2 hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+</style>
+
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
