--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -5,9 +5,21 @@
 {% set entry = craft.entries.section('suchmaschinenoptimierung').slug('dorfentwicklung').one() %}
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
+
+
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 9rem; position: relative;">
+<nav id="myScrollspy">
+  <ul class="nav nav-pills flex-column">
+       <li class="nav-item">   <a class="nav-link active" href="#start"> </a> <span>Dorfentwicklung</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#plan"></a> <span> Fünf-Stufen-Plan </span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#ziel"></a> <span>Starke Dörfer</span>  </li>
+       <li class="nav-item">   <a class="nav-link active" href="#gelingendesLeben"></a> <span>Gelingendes Leben</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#indigen"></a> <span>Indigene Gemeinschaften </span>  </li>
+  </ul>
+</nav>
+
+<div class="container-fluid text-center" style="padding-top: 9rem; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
@@ -50,7 +62,7 @@
 
     <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-dorfentwicklung.jpg').one().getUrl() }} ">
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" id="plan">
     {% set entry = craft.entries.section('projekte').slug('der-fünf-stufen-plan').one() %}
     <h2> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }} </div>
@@ -61,7 +73,6 @@
 
     <div id="accordion">
 
-      {# If there are any entries, loop through them #}
       {% if entries | length %}        {% set counter = 0 %}
 
       {% for entry in entries %} {% set counter = counter + 1 %}
@@ -90,7 +101,7 @@
 
   </div> <!-- Accordion - Div -->
 
-  <div class="container-fluid no-padding" style="background-color: #9EAC50">
+  <div class="container-fluid no-padding" style="background-color: #9EAC50" id="ziel">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('das-ziel-starke-dörfer').one() %}
         <h2 style="color: #ffffff;"> {{ entry.title }} </h2>
@@ -138,7 +149,7 @@
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 
-<div class="container-fluid no-padding" style="background-color: white;">
+<div class="container-fluid no-padding" style="background-color: white;" id="gelingendesLeben">
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
     {% set entry = craft.entries.section('projekte').slug('gelingendes-leben').one() %}
 
@@ -179,7 +190,7 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
 
-<div class="container-fluid no-padding" style="background-color: white;">
+<div class="container-fluid no-padding" style="background-color: white;" id="indigen">
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('projekte').slug('warum-indigene-gemeinschaften').one() %}
 
