--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -8,7 +8,17 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<nav id="myScrollspy">
+  <ul class="nav nav-pills flex-column">
+       <li class="nav-item">   <a class="nav-link active" href="#start"> </a> <span>Kinderpaten</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#saeulen"></a> <span> Die Säulen </span>  </li>
+       <li class="nav-item">   <a class="nav-link" href="#ziel"></a> <span>Das Ziel</span>  </li>
+       <li class="nav-item">   <a class="nav-link active" href="#ganzheitlich"></a> <span>Ganzheitliche Begleitung</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#warum"></a> <span>Warum ganzheitlich </span>  </li>
+  </ul>
+</nav>
+
+<div class="container-fluid text-center" style="padding-top: 150px; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
@@ -34,7 +44,7 @@
 
 {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" id="saeulen">
     {% set entry = craft.entries.section('projekte').slug('säulen').one() %}
     <h2> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }} </div>
@@ -75,7 +85,7 @@
 
   </div>
 
-  <div class="container-fluid no-padding" style="background-color: #ffffff;">
+  <div class="container-fluid no-padding" style="background-color: #ffffff;" id="ziel">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('starke-kinder').one() %}
         <h2 > {{ entry.title }} </h2>
@@ -115,13 +125,13 @@
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-<div class="container zwoelferspaltenlayout text-center">
+<div class="container zwoelferspaltenlayout text-center" id="ganzheitlich">
   {% set entry = craft.entries.section('projekte').slug('ganzheitliche-begleitung').one() %}
     <h2> {{ entry.title }} </h2>
     <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
 </div> <!-- ganzheitliche Begleitung -->
 
-<div class="container-fluid no-padding" style="background-color: white;">
+<div class="container-fluid no-padding" style="background-color: white;" id="warum">
   <div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
     {% set entry = craft.entries.section('projekte').slug('warum-ganzheitlich').one() %}
 
@@ -140,7 +150,7 @@
     <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </div>
   <div class="col-md-8" style="padding-top: 2rem;">
-    <h3> {{ entry.title }} </h3>
+    <h3> {{ entry.anleser }} </h3>
     <div id="copy"> {{ entry.text }}</div>
   </div>
 </div>
@@ -153,7 +163,7 @@
     <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </div>
   <div class="col-md-8" style="padding-top: 2rem;">
-    <h3> {{ entry.title }} </h3>
+    <h3> {{ entry.anleser }} </h3>
     <div id="copy"> {{ entry.text }}</div>
   </div>
 </div>
