--- a/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -8,6 +8,14 @@
 
 {% block block1 %}
 
+<nav id="myScrollspy">
+  <ul class="nav nav-pills flex-column">
+       <li class="nav-item">   <a class="nav-link active" href="#peru"> </a> <span>Peru</span> </li>
+       <li class="nav-item">   <a class="nav-link" href="#kenia"></a> <span> Kenia </span>  </li>
+  </ul>
+</nav>
+
+
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
@@ -17,9 +25,9 @@
   </ol>
 </nav>
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-<div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0;">
+<div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative;"> <!-- position: relative; das sich der container nicht von der Welle beeinflussen lässt -->
   <div style="padding-bottom:3rem; ">
     <h1 style="padding-bottom: 30px;"> Chance e.V. ist in Peru und Kenia aktiv   </h1>
     <p id="anleser" style="padding-bottom: 0;"> In den Regenwäldern Amazoniens und den Savannen am Rande der Maasai Mara.  </p>
@@ -28,7 +36,7 @@
 </div>
 
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;" id="peru">
   {% set entry = craft.entries.section('projekte').slug('peru').one() %}
 <div class="container achterspaltenlayout text-center">
   <h2> {{ entry.title }} </h2>
@@ -90,7 +98,7 @@
   </div>
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
-<div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;">
+<div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;" id="kenia">
   {% set entry = craft.entries.section('projekte').slug('kenia').one() %}
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
@@ -139,14 +147,13 @@
 </div>
 
   <div class="container achterspaltenlayout text-center">
-    {% set entries = craft.entries.section('projektberichte').all() %}
+    {% set entries = craft.entries.section('home').slug('zitate-home').one().children().all() %}
     {% set entry = random(entries) %}
 
-    <hr style="background-color: #ed6e2c; height: 1px;">
-    <div id="zitat"> {{ entry.text }}  </div>
-    <div id="autor" > {{ entry.zusatzfeld1 }}  </div>
-    <hr style="background-color: #ed6e2c; height: 1px;">
-
+    <hr style="background-color: #ed6e2c; height: 1px; margin: 1rem 0rem;">
+    <div id="zitat"> {{ entry.anleser }}  </div>
+    <div id="autor" > {{ entry.title }}  </div>
+    <hr style="background-color: #ed6e2c; height: 1px; margin: 1rem 0rem;">
   </div> <!-- Zufälliges Zitat -->
 
   {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
