--- a/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
@@ -59,18 +59,16 @@
   </div>
 </div>
 
-<div class="container achterspaltenlayout text-center">
+<div class="container achterspaltenlayout text-center" style="padding-bottom: 0;">
   {% set entries = craft.entries.section('ueberUns').slug('empfehlungen').one().children().all() %}
   {% set entry = random(entries) %}
-  <hr style="background-color: #ed6e2c; height: 1px;">
+  <hr style="background-color: #ed6e2c; height: 1px; margin-bottom: 1rem;">
   <div id="zitat"> {{ entry.text }}  </div>
   <div id="autor" > {{ entry.title }}  </div>
-  <hr style="background-color: #ed6e2c; height: 1px;">
+  <hr style="background-color: #ed6e2c; height: 1px; margin-top: 1rem;">
 </div> <!-- Empfehlungen in ihrem schönen Kästchen -->
 
-<div class="container-fluid no-padding">
   <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-arbeitsweise_farm.jpg').one().getUrl() }} ">
-</div>
 
 {% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
 <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
