--- a/templates/craft_sicherungWebsite/templates/ueberUns/transparenz.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/transparenz.html
@@ -18,12 +18,11 @@
 </nav>
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-<div class="container achterspaltenlayout" style="position: relative;">  <div style="padding-bottom:80px; ">
+<div class="container achterspaltenlayout" style="position: relative;">
     <h1 style="padding-bottom: 30px;"> Ihre Spenden kommen an </h1>
     <p id="anleser"> Mit Ihrer Spende verbessern Sie das Leben von Menschen und Gemeinschaften zielgerichtet und effizient. Ihre Hilfe kommt bei den Menschen vor Ort
       an und setzt dort positive Prozesse in Gang, die die Selbstbestimmung, Armutsbekämpfung und nachhaltige Entwicklung fördern. Erfahren Sie mehr
       über unseren Umgang mit Spenden. </p>
-    </div>
   </div>
 </div>
 
