scrollspy verschwinden lassen, video platzhalter einbauen, links spende berichtigen

--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -24,7 +24,11 @@
   </div>
 </div>
 
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} ">
+  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
+
+  <div class="container achterspaltenlayout" id="video">
+
+  </div>
 
 <div class="container achterspaltenlayout text-center" style="padding-top: 30px;">
   <div id="anleser"> {{ entry.text }}</div>
