--- a/templates/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -1,6 +1,6 @@
 <div class="container-fluid no-padding" style="background-color: #333333; padding-top: 0; color: #d7d7d7;" id="copy">
 
-<div class="container">
+<div class="container" id="footer">
   <div class="row">
     <div class="col-lg-8 col-md-0">  </div>
     <div class="col-lg-4 col-md-11">
