--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -40,11 +40,13 @@
   </div>
 
 
-    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-kinderpate.jpg').one().getUrl() }} ">
+    <img class="img-fluid" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme-kinderpate.jpg').one().getUrl() }} ">
+
+    <div class="container achterspaltenlayout" id="video"></div>
 
 {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
 
-  <div class="container achterspaltenlayout" id="saeulen">
+  <div class="container achterspaltenlayout" id="saeulen" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('projekte').slug('säulen').one() %}
     <h2> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }} </div>
@@ -120,7 +122,14 @@
     <div class="col-lg-7 col-md-7" style="padding-left: 2rem; padding-right: 2rem;">
       <h4 style="color: white;"> {{ entry.title }} </h4>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
-      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/kinderpate.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Peru werden</a>
+        </div> <div class="col-sm-2">  </div>
+        <div class="col-sm-6">
+          <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/kinderpate.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Kenia werden</a>
+        </div>
+      </div>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
