--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/partnerlandregelmaesig.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/partnerlandregelmaesig.html
@@ -29,7 +29,7 @@
 <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat; background-color: white;">
   <div class="container" style="max-width: 1280px;">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-md-2">
         <ul class="nav nav-pills flex-column" id="pills-tab" role="tablist">
           <li class="nav-item">
             <a class="nav-link active tab" style="padding: 1rem;" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Länderpate</a>
@@ -46,19 +46,27 @@
         </ul>
       </div>
 
-      <div class="col-sm-10" style="background-color: white;"> <!--Spaltenlayout, um die jetzt-spenden spalte mit 4 spalten dann zu integrieren -->
+      <div class="col-md-10" style="background-color: white;"> <!--Spaltenlayout, um die jetzt-spenden spalte mit 4 spalten dann zu integrieren -->
           <div class="tab-content" id="pills-tabContent"> <!-- tab-content fuer alle Pills -->
 
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
               {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
               <div class="row">
-                <div class="col-sm-8" style="padding-top: 3rem; padding-left: 2rem;">
+                <div class="col-md-8" style="padding-top: 3rem; padding-left: 2rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.text }}  </div>
                 </div>
-                  <div class="col-sm-1" style="background-color: white;"> </div>
-                  <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                  <div class="col-md-1" style="background-color: white;"> </div>
+                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                    <span id="copy"> <strong> Werden Sie: </strong> </span>
+                    <div class="row">
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Länderpate in Peru</a>
+                      </div>
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Länderpate in Kenia</a>
+                      </div>
+                    </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                   <img class="img-fluid" style="max-height: 720px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
@@ -67,45 +75,75 @@
             <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
               {% set entry = craft.entries.section('spenden').slug('partnerdorf').one() %}
               <div class="row">
-                <div class="col-sm-8" style="padding-top: 3rem; padding-left: 2rem;">
+                <div class="col-md-8" style="padding-top: 3rem; padding-left: 2rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
-                  <div class="col-sm-1" style="background-color: white;"> </div>
-                  <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                  <div class="col-md-1" style="background-color: white;"> </div>
+                  {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
+                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                    <span id="copy"> <strong> Werden Sie: </strong> </span>
+                    <div class="row">
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate allgemein</a>
+                      </div>
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate in Peru</a>
+                      </div>
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Dorfpate in Kenia</a>
+                      </div>
+                    </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
+                  {% set entry = craft.entries.section('spenden').slug('partnerdorf').one() %}
                   <img class="img-fluid" style="max-height: 478px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
             </div>
             {% set entry = craft.entries.section('spenden').slug('partnerkind').one() %}
             <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
               <div class="row">
-                <div class="col-sm-8" style="padding-top: 3rem; padding-left: 2rem;">
+                <div class="col-md-8" style="padding-top: 3rem; padding-left: 2rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
-                  <div class="col-sm-1" style="background-color: white;"> </div>
-                  <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                  <div class="col-md-1" style="background-color: white;"> </div>
+                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                    {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
+                    <span id="copy"> <strong> Werden Sie: </strong> </span>
+                    <div class="row">
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Kinderpate in Peru</a>
+                      </div>
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Kinderpate in Kenia</a>
+                      </div>
+                    </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
+                  {% set entry = craft.entries.section('spenden').slug('partnerkind').one() %}
                   <img class="img-fluid" style="max-height: 588px;" src="{% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
             </div>
             {% set entry = craft.entries.section('spenden').slug('partnerwald').one() %}
             <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
               <div class="row">
-                <div class="col-sm-8" style="padding-top: 3rem; padding-left: 2rem;">
+                <div class="col-md-8" style="padding-top: 3rem; padding-left: 2rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
-                  <div class="col-sm-1" style="background-color: white;"> </div>
-                  <div class="col-sm-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
-                    <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+                  <div class="col-md-1" style="background-color: white;"> </div>
+                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                    {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
+                    <span id="copy"> <strong> Werden Sie: </strong> </span>
+                    <div class="row">
+                      <div class="col-12">
+                        <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Waldpate in Peru</a>
+                      </div>
+                    </div>
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
+                  {% set entry = craft.entries.section('spenden').slug('partnerwald').one() %}
                   <img class="img-fluid"  style="max-height: 530px;" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
               </div>
             </div>
