--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
@@ -89,47 +89,25 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" style="color:white;" id="naviUeberschrift"> SPENDEN </a>
-
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="naviUeberschrift"> SPENDEN </a>
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein.html">Allgemein Spenden</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html">Regelmäßig</a></li>
-                </ul>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Übersicht Spenden</a>
               </li>
-
-              <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen.html">Projektbezogen Spenden</a>
-               <ul class="dropdown-menu">
-                 <li class="dropdown-submenu">
-                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
-                   <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
-                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
-                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
-                   </ul>
-                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Regelmäßig</a>
-                   <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
-                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
-                     <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
-                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
-                   </ul>
-                 </li>
-                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
-                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/einkaufenundspenden">Einkaufen und Spenden</a></li>
-                 <li class="dropdown-item"><a href="#">Lastschrifttermine</a></li>
-
-               </ul>
-             </li>
-           </li>
-
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/jetztspenden.html">Jetzt Spenden</a>
+              </li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/partnerlandregelmaesig.html">Pate werden</a>
+              </li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/schenkenundspenden.html">Schenken und Spenden</a>
+              </li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a>
+              </li>
             </li>
-          </ul>
-        </div>
+          </div>
 
 
         <div class="dropdown">
