--- a/templates/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/spende.html
@@ -239,7 +239,7 @@
         </div> <!-- Die Kontrollansicht mit den Feldern -->
 
       </div> <!-- Kontrollansicht - Hintergrundcontainer -->
-
+      <!-- Einbinden der PDF-Erstell-Bibliothek -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js" integrity="sha384-CchuzHs077vGtfhGYl9Qtc7Vx64rXBXdIAZIPbItbNyWIRTdG0oYAqki3Ry13Yzu" crossorigin="anonymous"></script>
 
       <script>
